--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 body {
     margin: 0;
     padding: 0;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #main-container {
     width: 1024px;
     height: 768px;
-    background-color: aquamarine;;
+    background-color: aquamarine;
 }
 
 #status {
@@ -21,19 +25,20 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    align-items: center;
     width: 30%;
     height: 100%;
     background-color: greenyellow;
 }
 
 .health {
-    width: 100%;
+    width: 90%;
     height: 40%;
     background-color: pink;
 }
 
 .stamina {
-    width: 100%;
+    width: 90%;
     height: 40%;
     background-color: blue
 }
@@ -41,7 +46,7 @@ body {
 #characters {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 100%;
     height: 70%;
     background-color: lightsalmon;
