--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
     justify-content: center;
     -webkit-user-select: none;
     user-select: none;
-    background-image: url(./images/background.avif);
+    background-image: url(./images/background.png);
+    background-size: cover;
 }
 
 #main-container {
