--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,27 @@
-body {
+@import url('main.css');
+@import url('enemy.css');
+:root {
+    --colour-one: #DFD828;
+    --colour-two: #05D9E8;
+    --colour-three: #05487E;
+    --colour-four: #AA003F;
+    --colour-five: #01012B;
+}
+
+* {
     margin: 0;
     padding: 0;
+    font-family: "Black Ops One", system-ui;
+    font-weight: 400;
+    font-style: normal;
+}
+
+body {
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url(./images/background.avif);
+    background-image: url("../images/background.avif");
 }
 
 #main-container {
@@ -14,7 +30,7 @@ body {
     border-radius: 4px;
     border: 20px double rgba(82, 82, 82, 0.976);
     background-size: cover;
-    background-image: url(./images/scenario.jpg);
+    background-image: url("../images/scenario.jpg");
 }
 
 #status {
@@ -65,7 +81,7 @@ body {
     background-position-y: 40px;
     background-size: 250%;
     background-repeat: no-repeat;
-    background-image: url(./images/player.png)
+    background-image: url("../images/player.png")
 }
 
 #enemy {
@@ -73,7 +89,7 @@ body {
     background-position-y: -80px;
     background-size: 200%;
     background-repeat: no-repeat;
-    background-image: url(./images/enemy.png)
+    background-image: url("../images/enemy.png")
 }
 
 #actions {
