--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,38 @@
+.modal-intro {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(36, 36, 36, 0.815);
+}
+
+.modal-text {
+    width: 620px;
+    height: 320px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    row-gap: 2em;
+    padding: 1em;
+    clip-path: polygon(15% 0%, 85% 0%, 100% 15%, 100% 85%, 85% 100%, 15% 100%, 0% 85%, 0% 15%);
+    background-color: var(--colour-two);
+    color: rgb(14, 13, 13);
+    font-size: calc(.5em + 1vw);
+    border: 8px solid var(--colour-six);
+    button {
+        width: 40%;
+        border: none;
+        padding: .2em;
+        background-color: var(--colour-six);
+        box-shadow: .1em .2em 0em var(--colour-five);
+        color: var(--colour-two);
+        font-size: calc(.8em + 1vw);
+    }
+}
+
 .main-game {
     width: 1024px;
     height: 768px;
@@ -6,7 +41,7 @@
     justify-content: center;
     align-items: center;
     row-gap: 3em;
-    background-image: url("../images/main-background-retro-neon-vertical.jpg");
+    background-image: url("../images/neon-retro.jpg");
     background-size: cover;
     position: relative;
 }
@@ -54,4 +89,10 @@
     box-shadow: 0em .3em 0em var(--colour-three);
     z-index: 1;
     cursor: pointer;
+}
+
+#music, #effects {
+    position: absolute;
+    bottom: 0;
+    right: 20%;
 }
