--- a/assets/css/enemy.css
+++ b/assets/css/enemy.css
@@ -7,6 +7,7 @@
     align-items: center;
     background: linear-gradient(180deg, var(--colour-five) 42%, var(--colour-four) 100%);
     row-gap: 1em;
+    position: relative;
     h1 {
         color: var(--colour-four);
         font-size: calc(5em + 1vw);
@@ -19,11 +20,11 @@
 }
 
 #retry-btn {
-    width: 20%;
+    width: 25%;
     border: none;
     padding: .3em;
     font-size: calc(1em + 1vw);
     color: var(--colour-five);
     background-color: var(--colour-four);
-    box-shadow: 4px 8px var(--colour-five)
+    box-shadow: 4px 8px var(--colour-five);
 }
