--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,12 +58,14 @@ body {
     width: 100%;
     height: 40%;
     background-color: rgb(179, 255, 0);
+    transition: 1.5s ease 0.2s;
 }
 
 .stamina {
     width: 100%;
     height: 40%;
-    background-color: rgb(189, 0, 236)
+    background-color: rgb(189, 0, 236);
+    transition: 1.5s ease 0.2s;
 }
 
 #characters {
