--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,7 @@ body {
     border: 5px double #5d2145;
     background-size: cover;
     background-image: url("../images/scenario.webp");
+    padding-bottom: 1em;
 }
 
 #status {
@@ -58,6 +59,7 @@ body {
     height: 60%;
     margin-top: 30px;
     padding: 0 20px;
+    row-gap: 1em;
 }
 
 .health {
@@ -65,12 +67,12 @@ body {
     height: 40%;
     background-color: rgb(179, 255, 0);
     clip-path: polygon(13% 0%, 100% 0%, 85% 99.5%, 0% 100%);
-    position: relative;
     transition: 1.5s ease 0.2s;
+    display: flex;
+    justify-content: flex-end;
+    border-bottom: 8px solid var(--colour-nine);
     span {
-        position: absolute;
-        right: 10em;
-        top: 10px;
+        padding-right: .9em;
         color: var(--colour-five);
         font-size: 1.5em;
     }
@@ -81,12 +83,12 @@ body {
     height: 40%;
     background-color: rgb(189, 0, 236);
     clip-path: polygon(13% 0%, 100% 0%, 85% 99.5%, 0% 100%);
-    position: relative;
     transition: 1.5s ease 0.2s;
+    display: flex;
+    justify-content: flex-end;
+    border-bottom: 6px solid var(--colour-two);
     span {
-        position: absolute;
-        top: 10px;
-        right: 10em;
+        padding-right: .9em;
         color: var(--colour-five);
         font-size: 1.5em;
     }
@@ -129,6 +131,45 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.buttons {
+    display: flex;
+    column-gap: 1em;
+    padding: .5em;
+}
+
+.attack,
+.special,
+.heal {
+    border-radius: 50%;
+    width: calc(5em + 1vw);
+    height: calc(5em + 1vw);
+    background-color: #333;
+    border: 2px solid var(--colour-six);
+    box-shadow: 2px 2px var(--colour-four);
+}
+
+.attack {
+    background-image: url("../images/sword.png");
+    background-size: 60%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.special {
+    background-image: url("../images/blast.png");
+    background-size: 60%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+
+.heal {
+    background-image: url("../images/syringe.png");
+    background-size: 60%;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 button {
