--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -111,3 +111,73 @@
     z-index: 1;
     cursor: pointer;
 }
+
+.layer-menu {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 100;
+}
+
+.menu__ol {
+    width: 50%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    row-gap: 1em;
+    background-color: var(--colour-two);
+    padding: 1em;
+    clip-path: polygon(15% 0%, 85% 0%, 100% 15%, 100% 85%, 85% 100%, 15% 100%, 0% 85%, 0% 15%);
+    color: var(--colour-nine);
+    font-size: calc(.5em + 1vw);
+    list-style-type: none;
+    border: 6px solid var(--colour-six);
+    li {
+        width: 100%;
+        text-align: center;
+        padding: .5em;
+
+        .option-btn {
+            width: 40%;
+            border: none;
+            padding: .2em;
+            background-color: var(--colour-six);
+            box-shadow: .1em .2em 0em var(--colour-five);
+            color: var(--colour-two);
+            font-size: calc(.4em + 1vw);
+        }
+    }
+}
+
+.close-menu {
+    position: absolute;
+    width: calc(1em + 1vw);
+    height: calc(1em + 1vw);
+    z-index: 2;
+    right: 30%;
+    top: 25%;
+    font-size: calc(1em + 1vw);
+    background-color: var(--colour-six);
+    color: var(--colour-two);
+    border: none;
+    box-shadow: .1em .2em 0em var(--colour-five);
+}
+
+
+.layer-text {
+    position: absolute;
+    width: 60%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 4;
+}
