--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,7 @@ body {
     align-items: end;
     justify-content: space-around;
     width: 100%;
-    height: 60%;
+    height: 63%;
 }
 
 .pj {
@@ -114,20 +114,20 @@ body {
 
 #player {
     background-repeat: no-repeat;
-    background-position: center;
-    background-size: 70%;
+    background-position: center bottom;
+    background-size: 55%;
     background-image: url("../images/player.webp")
 }
 
 #enemy {
     background-repeat: no-repeat;
-    background-position: center;
-    background-size: 80%;
+    background-position: center bottom;
+    background-size: 65%;
     background-image: url("../images/enemy.webp")
 }
 
 #actions {
-    height: 13%;
+    height: 8%;
     display: flex;
     align-items: center;
     justify-content: center;
