--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -171,13 +171,59 @@
 }
 
 
-.layer-text {
+.layer-option {
     position: absolute;
-    width: 60%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 4;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.option {
+    width: 50%;
+    height: 60%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    z-index: 4;
+    row-gap: 1em;
+    background-color: var(--colour-two);
+    clip-path: polygon(15% 0%, 85% 0%, 100% 15%, 100% 85%, 85% 100%, 15% 100%, 0% 85%, 0% 15%);
+    border: 6px solid var(--colour-six);
+}
+
+.option__h2{
+    color: var(--colour-six);
+    font-size: calc(1.4em + 1vw);
+}
+
+.option ul{
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1em;
+    padding: 1.6em;
+    li {
+        display: flex;
+        column-gap: 1em;
+        align-items: center;
+        img {
+            width: calc(4em + 1vw);
+            height: calc(4em + 1vw);
+
+        }
+        p {
+            color: #333;
+            font-size: calc(.4em + 1vw);
+        }
+    }
+}
+
+.btn-close {
+    position: absolute;
+    right: 30%;
+    top: 26%;
 }
