feat: rain added to menu and battle / fix: loops for songs/ feat: start button 3d effect

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -97,6 +97,11 @@
     cursor: pointer;
 }
 
+.start-button:active {
+    transform: translateY(.2em);
+    box-shadow: 0em .1em 0em var(--colour-three);
+}
+
 #music, #effects {
     width: 10%;
     position: absolute;
