resources: music, speaker and neon-retro images compressed and converted to webp to reduce slow loading

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -50,7 +50,7 @@
     justify-content: center;
     align-items: center;
     row-gap: 3em;
-    background-image: url("../images/neon-retro.jpg");
+    background-image: url("../images/neon-retro.webp");
     background-size: cover;
     position: relative;
 }
